# model_wrappers

./: README.md  README_run.md  pyproject.toml
examples/: example_holland.py
examples/array_test/: dummy_script.py  job_template.sh  test_array.py  test_array.yaml
examples/templates/xbeach_holland_default/: params.txt
examples/trasgu/: custom_wrapper.py  test_config.yaml
examples/xbeach/: example_holland.py  xbeach_holland.yaml
examples/xbeach/aux/: xbeach_wrapper.py
examples/xbeach/holland_template/: params.txt
galerna/: base.py  bulk_array.py  cli.py
model_wrappers/: base.py  utils.py
